--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^5.3.0",
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.19",
         "@react-google-maps/api": "^2.19.2",
@@ -31,6 +32,7 @@
         "i18next": "^23.6.0",
         "i18next-browser-languagedetector": "^7.1.0",
         "json-server": "^0.17.4",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-bootstrap": "^2.9.1",
