--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^5.3.2",
         "chart.js": "^4.4.0",
         "dayjs": "^1.11.10",
+        "draft-js": "^0.11.7",
         "eslint": "^8.56.0",
         "formik": "^2.4.5",
         "history": "^5.3.0",
@@ -41,7 +42,7 @@
         "react-confirm-alert": "^3.0.6",
         "react-data-table-component": "^7.5.4",
         "react-dom": "^18.2.0",
-        "react-feather": "^2.0.10",
+                "react-feather": "^2.0.10",
         "react-i18next": "^13.3.1",
         "react-icons": "^4.11.0",
         "react-query": "^3.39.3",
@@ -50,6 +51,7 @@
         "react-scripts": "^5.0.1",
         "react-select": "^5.7.7",
         "react-simple-star-rating": "^5.1.7",
+        "react-simple-wysiwyg": "^3.0.2",
         "react-switch": "^7.0.0",
         "react-tabs": "^6.0.2",
         "react-toastify": "^9.0.0",
@@ -97,6 +99,6 @@
         ]
     },
     "devDependencies": {
-        "@types/react-toggle": "^4.0.5"
+                "@types/react-toggle": "^4.0.5"
     }
 }
